# aws-ses-bounce-rs

./: .gitignore  Cargo.toml  Dockerfile
src/: domain.rs  main.rs
